CHANGELOG
Version 1.1.2.5
 - Fix Report Activate/Deactivate
 - Fix Report PERA PADALA to display PMFTC ME#/MR#
 - Fix Report Termilogy Payout/Send In

Version 1.1.2.4
 - Add Username on PT
 - Add Item Type on Loan Register - Redeem
 - Add Auction Monthly Report
 - Add Monthly Money Transfer Report for BSP
 - Add BSP Report Extract
 - Add Dollar Daily Report
 - FIX Pawning without CUSTOMER error 
 - FIX in JE round off
 - FIX Report - Hourly Report
 - FIX Report Size
 - FIX Money Transfer Report Header
 - Package - Include Segregated layout
 - Package - Include InstallPath at Register

Version 1.1.1.2
 - FIX pawning save data.
 - FIX New Loan/Renew Register
 - FIX Redeem Register
 - FIX Monthly Loan Reports
 - FIX Renew JE for more than 1Mon
 - FIX slow Money Transfer saving
 - Added Cash InOut Daily Summary
 - Add PT Claim Sub, Pawner
 - Add OLD PT in PT
 - Include Daily Insurance Report
 - Include Additional Loan Register
 - Include Penalty on Redeem Renew Monthly
 - Include BRGY in PT Address

Version 1.1.1.1
 - Pawnticket Renewal, show old PT#
 - Redemption don't SAVE Interest and Penalty.

Version 1.1.1.0c
 - Enhance pawning computetation codes
 - Money Transfer Report
 - REDEEM MORE THAN ONE(1) MONTH over charge(double interest)
 - BUG on PAWNING not AUTOCOMPUTE
 - Monthly Report for Money Transfer
 - Add another services in Pera Padala
 - Add CashInOut Button for BDO ATM CashOut
 - No Redundant PT/OR
 - Fix Outstanding Loan

Version 1.1.1.0
 - Add Insurance Report
 - Cash Count Sheet disable when store is open
 - Insurance Ref# length increase
 - RF SAP Code Update

Version 1.1.0.5
 - Revise Segregation List Report
 - Item Pullout per Category Report
 - Add change rate module
 - Include BATCH FILE for backup
 - Fix ITEM PULLOUT
 - include BACKUP.BAT

Version 1.1.0.4
 - Add Entries for Segregation

Version 1.1.0.3
 - Item Pullout problem
 - Migration double name can causes wrong name
 - No Description will not be imported
 - POSAdmin can void
 - Fix Reports
