@@ -1,0 +1,44 @@
+1.0.10 - 1.0.11
+
+DROP VIEW MONEY_TRANSFER;
+
+CREATE VIEW MONEY_TRANSFER( 
+  SERVICETYPE, TRANSDATE, MONEYTRANS,
+  REFNUM, PAYOUT, SENDOUT, SERVICECHARGE,
+  COMMISSION, NETAMOUNT, SENDERNAME,
+  S_ADDR, RECEIVERNAME, R_ADDR, LOCATION)
+AS 
+SELECT 
+  MT.ServiceType, MT.TransDate,
+    CASE MoneyTrans 
+      WHEN 0 THEN 'PAYOUT'
+      WHEN 1 THEN 'SENDIN'
+      ELSE 'NA'
+    END AS MoneyTrans,
+    CASE
+      WHEN ServiceType LIKE 'Pera Padala%' AND MoneyTrans = 0
+      THEN 'ME# ' || LPAD(TransID,5,0)
+    WHEN ServiceType LIKE 'Pera Padala%' AND MoneyTrans = 1
+      THEN 'MR# ' || LPAD(TransID,5,0)
+      ELSE RefNum END as RefNum,
+    CASE MoneyTrans
+      WHEN 0 THEN AMOUNT 
+      ELSE 0 END AS PAYOUT,
+    CASE MoneyTrans
+      WHEN 1 THEN AMOUNT 
+      ELSE 0 END AS SENDOUT,
+    MT.ServiceCharge,
+    MT.Commission,
+    MT.NETAMOUNT, MT.SENDERNAME, 
+    C.ADDR_STREET || ' ' || C.ADDR_BRGY || ' ' || C.ADDR_CITY AS S_ADDR, 
+    MT.RECEIVERNAME, 
+    R.ADDR_STREET || ' ' || R.ADDR_BRGY || ' ' || R.ADDR_CITY AS R_ADDR,
+    MT.LOCATION
+FROM 
+  TBLMONEYTRANSFER MT
+  INNER JOIN TBLCLIENT C
+  ON  MT.SENDERID = C.CLIENTID
+  INNER JOIN TBLCLIENT R
+  ON  MT.RECEIVERID = R.CLIENTID
+WHERE 
+  Status = 'A';
