@@ -1,0 +1,4 @@
+1.0.11 - 1.0.12
+
+ALTER TABLE TBL_DAILYTIMELOG ADD AMOUNT DECIMAL(12, 2) DEFAULT '0.0' NOT NULL;
+ALTER TABLE TBL_DAILYTIMELOG ADD USERID SMALLINT NOT NULL;
