@@ -24,9 +24,26 @@
 
         For Each cio As CashInOutTransaction In CIOtransactions
             cio.Save()
+            Select Case cio.Category
+                Case "BDO ATM CASHOUT"
+                    MOD_NAME = "BDO ATM"
+                Case cio.Category.StartsWith("ECPAY")
+                    MOD_NAME = "ECPAY"
+                Case cio.Category.StartsWith("GPRS"), "TICKETING - GPRS"
+                    MOD_NAME = "GPRS"
+                Case "TICKETING - WU"
+                    MOD_NAME = "TICKETING - WU"
+                Case "SALES OF INVENTORIABLES"
+                    MOD_NAME = "SALES OF INVENTORIABLES"
+                Case "SMART MONEY PADALA"
+                    MOD_NAME = "SMART MONEY PADALA IN"
+                Case "SMART MONEY ENCASHMENT-CASHOUT-Dalton"
+                    MOD_NAME = "SMART MONEY PADALA OUT"
+                Case Else
+                    AddTimelyLogs(MOD_NAME, transName, False)
+            End Select
+            AddTimelyLogs(MOD_NAME, transName, cio.Amount)
         Next
-
-        AddTimelyLogs(MOD_NAME, transName, False)
 
         MsgBox("Information Posted", MsgBoxStyle.Information)
         CIOtransactions = New CollectionCIO
