@@ -3,6 +3,7 @@ Version 1.1.2.5
  - Fix Report Activate/Deactivate
  - Fix Report PERA PADALA to display PMFTC ME#/MR#
  - Fix Report Termilogy Payout/Send In
+ - Modify Daily Time Log Reports
 
 Version 1.1.2.4
  - Add Username on PT
